--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,10 @@ micronaut {
 
 dependencies {
     kapt("io.micronaut.data:micronaut-data-processor")
+    annotationProcessor("io.micronaut:micronaut-inject-java:2.5.8")
+    runtime("io.micronaut:micronaut-core:2.5.8")
     implementation("io.micronaut:micronaut-runtime")
+    implementation("io.micronaut:micronaut-http-client")
     implementation("io.micronaut.data:micronaut-data-hibernate-jpa")
     implementation("io.micronaut.grpc:micronaut-grpc-runtime")
     implementation("io.micronaut.kotlin:micronaut-kotlin-runtime")
@@ -38,7 +41,12 @@ dependencies {
     testImplementation("org.testcontainers:junit-jupiter")
     testImplementation("org.testcontainers:postgresql")
     testImplementation("org.testcontainers:testcontainers")
-    implementation("io.micronaut:micronaut-validation")
+    testImplementation("com.h2database:h2")
+
+    implementation("org.hibernate.validator:hibernate-validator:7.0.0.Final")
+    implementation("io.micronaut.xml:micronaut-jackson-xml")
+    runtimeOnly("com.fasterxml.jackson.module:jackson-module-kotlin")
+    implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
 
     runtimeOnly("com.fasterxml.jackson.module:jackson-module-kotlin")
 
