Adiciona a capacidade de se comunicar com o serviço externo do Banco Central e modifica o comportamento anteriores para incluir essa comunicação.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ micronaut:
   application:
     name: keyManager
   http:
+    client:
+      logger-name: mylogger
     services:
       itauERP:
         logger-name: itauERP
