--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -25,7 +25,7 @@
         - echo Iniciando build da imagem do container...
         - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG ./build/docker/
         - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG public.ecr.aws/i2c7a5l2/$IMAGE_REPO_NAME:$IMAGE_TAG
-        - docker tag $IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER public.ecr.aws/i2c7a5l2/$IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER
+        - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG public.ecr.aws/i2c7a5l2/$IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER
 
 
     post_build:
