--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -15,6 +15,7 @@
     pre_build:
       commands:
         - export KUBECONFIG=$HOME/.kube/config
+        - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/i2c7a5l2
         - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn $ARN_ROLE
 
     build:
